--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "3.5.1",
-    "jade": "*"
+    "jade": "*",
+    "crypto": "0.0.3"
   },
   "devDependencies": {
     "nodemon": "~1.0.17"
