--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.5.1",
     "jade": "*",
-    "crypto": "0.0.3"
+    "crypto": "0.0.3",
+    "knox": "~0.8.9"
   },
   "devDependencies": {
     "nodemon": "~1.0.17"
